crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_element.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "Foo",
                span: 1..4,
            },
        ),
        attrs: [
            JSXAttr {
                name: "bar",
                value: Some(
                    Str(
                        "baz",
                    ),
                ),
            },
            JSXAttr {
                name: "qux",
                value: None,
            },
        ],
        self_closing: false,
    },
    children: [],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "Foo",
                    span: 19..25,
                },
            ),
        },
    ),
}
