crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_element_with_children_elements.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "ul",
                span: 1..3,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Element(
            JSXElement {
                opening: JSXOpeningElement {
                    name: Ident(
                        Ident {
                            name: "li",
                            span: 5..7,
                        },
                    ),
                    attrs: [],
                    self_closing: false,
                },
                children: [
                    Text(
                        JSXText {
                            span: 8..11,
                            value: "one",
                        },
                    ),
                ],
                closing: Some(
                    JSXClosingElement {
                        name: Ident(
                            Ident {
                                name: "li",
                                span: 11..16,
                            },
                        ),
                    },
                ),
            },
        ),
        Element(
            JSXElement {
                opening: JSXOpeningElement {
                    name: Ident(
                        Ident {
                            name: "li",
                            span: 17..19,
                        },
                    ),
                    attrs: [],
                    self_closing: false,
                },
                children: [
                    Text(
                        JSXText {
                            span: 20..23,
                            value: "two",
                        },
                    ),
                ],
                closing: Some(
                    JSXClosingElement {
                        name: Ident(
                            Ident {
                                name: "li",
                                span: 23..28,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "ul",
                    span: 28..33,
                },
            ),
        },
    ),
}
