crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_element_with_children_text.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    span: 0..22,
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "h1",
                span: 1..3,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Text(
            JSXText {
                span: 4..17,
                value: "Hello, world!",
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "h1",
                    span: 17..22,
                },
            ),
        },
    ),
}
