crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_element_with_text_and_exprs.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "h1",
                span: 1..3,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Text(
            JSXText {
                span: 4..11,
                value: "Hello, ",
            },
        ),
        ExprContainer(
            JSXExprContainer {
                expr: Expr {
                    kind: Identifier(
                        "name",
                    ),
                    span: 12..16,
                },
            },
        ),
        Text(
            JSXText {
                span: 17..18,
                value: "!",
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "h1",
                    span: 18..23,
                },
            ),
        },
    ),
}
