crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_fragment.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "",
                span: 1..1,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Element(
            JSXElement {
                opening: JSXOpeningElement {
                    name: Ident(
                        Ident {
                            name: "span",
                            span: 3..7,
                        },
                    ),
                    attrs: [],
                    self_closing: false,
                },
                children: [
                    Text(
                        JSXText {
                            span: 8..15,
                            value: "Hello, ",
                        },
                    ),
                ],
                closing: Some(
                    JSXClosingElement {
                        name: Ident(
                            Ident {
                                name: "span",
                                span: 15..22,
                            },
                        ),
                    },
                ),
            },
        ),
        Element(
            JSXElement {
                opening: JSXOpeningElement {
                    name: Ident(
                        Ident {
                            name: "span",
                            span: 23..27,
                        },
                    ),
                    attrs: [],
                    self_closing: false,
                },
                children: [
                    Text(
                        JSXText {
                            span: 28..34,
                            value: "world!",
                        },
                    ),
                ],
                closing: Some(
                    JSXClosingElement {
                        name: Ident(
                            Ident {
                                name: "span",
                                span: 34..41,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "",
                    span: 41..44,
                },
            ),
        },
    ),
}
