crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_nested_fragments.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    span: 0..18,
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "",
                span: 1..1,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        Text(
            JSXText {
                span: 2..3,
                value: "a",
            },
        ),
        Fragment(
            JSXFragment {
                span: 3..14,
                opening: JSXOpeningFragment,
                children: [
                    ExprContainer(
                        JSXExprContainer {
                            expr: Ident(
                                Ident {
                                    name: "b",
                                    span: 6..7,
                                },
                            ),
                        },
                    ),
                    ExprContainer(
                        JSXExprContainer {
                            expr: Ident(
                                Ident {
                                    name: "c",
                                    span: 9..10,
                                },
                            ),
                        },
                    ),
                ],
                closing: JSXClosingFragment,
            },
        ),
        Text(
            JSXText {
                span: 14..15,
                value: "d",
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "",
                    span: 15..18,
                },
            ),
        },
    ),
}
