crates/escalier_parser/src/snapshots/escalier_parser__jsx_parser__tests__parse_jsx_props_dot_children.snap
---
source: crates/escalier_parser/src/jsx_parser.rs
expression: jsx_elem
---
JSXElement {
    span: 0..16,
    opening: JSXOpeningElement {
        name: Ident(
            Ident {
                name: "div",
                span: 1..4,
            },
        ),
        attrs: [],
        self_closing: false,
    },
    children: [
        ExprContainer(
            JSXExprContainer {
                expr: Binary(
                    Binary {
                        span: 6..9,
                        left: Ident(
                            Ident {
                                name: "a",
                                span: 6..7,
                            },
                        ),
                        op: Plus,
                        right: Ident(
                            Ident {
                                name: "b",
                                span: 8..9,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    closing: Some(
        JSXClosingElement {
            name: Ident(
                Ident {
                    name: "div",
                    span: 10..16,
                },
            ),
        },
    ),
}
